--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -616,6 +616,11 @@ a.post-user-name {
   margin-top: 1rem;
 }
 
+.comment-text-content a {
+  color: blue;
+  text-decoration: underline;
+}
+
 
 @media (max-width: 76.5rem) {
   .profile-image {
