--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,6 +32,9 @@
 //Poppins (replaces DIN)
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 // styles.css
 * {
