Fixed dropdown arrow next to profile picture to open up menu

--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -84,6 +84,7 @@
 .dropdown-icon.rotate-down {
   transform: rotate(360deg);
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .social-icons {
