--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -413,6 +413,15 @@ a.post-user-name {
   padding: 1rem 2rem;
   width: auto;
   word-break: break-word;
+
+  & a {
+    color: #007bff;
+    text-decoration: underline;
+  }
+
+  & a:hover {
+    color: #0056b3;
+  }
 }
 
 .recent-location-select {
