--- a/styles/dontate.scss
+++ b/styles/dontate.scss
@@ -12,6 +12,14 @@
   text-align: center;
 }
 
+.donation-text-grid {
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
 .donorbox-images-container {
   display: flex;
   flex-direction: row;
