Fixed like/unlike, and stories caching to reload new posts

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -367,6 +367,7 @@ a.post-user-name {
   flex-direction: column;
   font-weight: bold;
   justify-content: flex-end;
+  margin-left: 5px;
   text-decoration: none;
 
   :hover {
