--- a/styles/report.scss
+++ b/styles/report.scss
@@ -112,6 +112,7 @@
   &litter-stats-header {
     font-family: Poppins, sans-serif;
     font-size: 1.75rem;
+    font-weight: bold;
   }
 
   &litter-stats-header {
