--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -11,25 +11,40 @@
 .contact-container {
   background: linear-gradient(to bottom, $litterpic-green, $black);
   border-radius: .5rem;
-  color: $white;
+  width: 80%;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   height: 70%;
-  padding: .6rem;
-  width: 100%;
+  color: $white;
 
   h1 {
-    text-align: center;
+    font-size: 1.5rem; // Base size for smaller screens
+
+    @media (min-width: 768px) {
+      font-size: 2rem; // Medium screens
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 2.4rem; // Larger screens
+    }
   }
 }
 
 .contact-form-group {
+  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   margin-right: 3.75rem;
 
   label {
-    margin-bottom: .3rem;
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
   }
 }
 
@@ -40,6 +55,7 @@
 
 #message {
   height: 5rem;
+  width: 100%;
 }
 
 .contact-form-row {
@@ -69,8 +85,14 @@
 }
 
 #contact-submit-button {
-  border-radius: .5rem;
-  display: flex;
+  display: inline-block;
+  padding: 10px 20px;
+  //background-color: #0070f3;
+  //color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
   margin-top: .6rem;
 
   &:hover {
@@ -84,7 +106,6 @@
   justify-content: center;
   margin-top: 1.25rem;
 }
-
 
 @media (max-width: 76.5rem) {
   // Contact
@@ -127,7 +148,6 @@
       font-weight: bold;
     }
   }
-
 
   .contact-form-group {
     display: flex;
@@ -210,10 +230,6 @@
     height: 100%;
     padding: .6rem;
     width: 100%;
-
-    h1 {
-      font-size: 2.25rem;
-    }
 
     button {
       padding: .3rem;
