Improve website speed

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,6 +28,7 @@
 @import 'volunteer';
 @import 'community_service';
 @import 'notification';
+@import 'carousel-loading';
 
 //Font Awesome
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
