Multiple updates to stories.js

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,6 +28,8 @@
 @import 'volunteer';
 @import 'community_service';
 @import 'notification';
+@import 'modern-stories';
+@import 'loading-spinner';
 
 
 //Font Awesome
