--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -106,6 +106,7 @@
       display: flex;
       margin-bottom: 4.5rem;
       margin-right: .5rem;
+      margin-left: 1rem;
       position: absolute;
       right: .5rem;
 
@@ -116,9 +117,9 @@
 
         svg {
           fill: currentColor;
-          height: 3rem;
+          height: 2.5rem;
           margin-bottom: 3rem;
-          width: 3rem;
+          width: 2.5rem;
         }
       }
     }
@@ -126,6 +127,42 @@
 
   .nav-bar.mobile-nav .nav-links.show-navlinks {
     display: flex;
+    width: 100%; /* Ensure full width */
+    text-align: center; /* Center all text */
+
+    div, a, .nav-link {
+      width: 100%; /* Full width for all links */
+      text-align: center; /* Center all text */
+      padding: 12px 0; /* Consistent padding */
+      border-bottom: 1px solid rgba(0,0,0,0.1); /* Separator between links */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:last-child {
+        border-bottom: none; /* No border for last item */
+      }
+    }
+
+    /* Fix for the nav-links-desktop container */
+    .nav-links-desktop {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+
+      div, a, .nav-link {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        padding: 12px 0;
+        margin: 0;
+      }
+    }
   }
 
   .hide {
@@ -133,15 +170,26 @@
   }
 
   .nav-links-desktop {
-    .nav-link {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .nav-link, div, a {
       color: $black;
       cursor: pointer;
       font-size: 1rem;
       font-weight: lighter;
-      margin-left: 0;
-      margin-right: .5rem;
+      margin: 0;
+      padding: 12px 0;
       text-decoration: none;
       transition: color .1s ease;
+      text-align: center; /* Center text */
+      width: 100%; /* Full width */
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       &:hover {
         color: $table-highlight-green;
