--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -425,6 +425,13 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   white-space: nowrap;
   text-align: center;
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+    padding: 6px 12px;
+    border-radius: 30px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .post-username-location {
@@ -704,13 +711,22 @@ a.post-user-name {
   cursor: pointer;
   display: inline-block;
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
-  padding: .25rem .5rem;
+  font-size: 0.9rem;
+  padding: .2rem .4rem;
   text-align: center;
   text-decoration: none;
+  max-width: 180px;
+  margin: 10px auto;
 
   &:hover {
     background-color: $facebook-blue;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 0.8rem;
+    padding: 0.15rem 0.3rem;
+    max-width: 150px; /* Smaller on mobile */
+    margin: 8px auto; /* Center the button */
   }
 }
 
@@ -777,12 +793,19 @@ a.post-user-name {
   border-radius: .5rem;
   cursor: pointer;
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-left: auto;
-  padding: 0.25rem 0.5rem;
+  padding: 0.2rem 0.4rem;
   text-align: center;
   text-decoration: none;
   z-index: 1000;
+  max-width: 150px;
+
+  @media (max-width: 768px) {
+    font-size: 0.8rem;
+    padding: 0.15rem 0.3rem;
+    max-width: 120px; /* Smaller on mobile */
+  }
 }
 
 .button-container {
