--- a/styles/login.scss
+++ b/styles/login.scss
@@ -36,7 +36,7 @@
 .sign-in-button {
   border-radius: .5rem;
   font-family: Poppins, sans-serif;
-  margin-left: auto;
+  margin-left: 15px;
   margin-right: auto;
   margin-top: 1.9rem;
   width: 6.25rem;
