Added members count and members page

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -33,6 +33,8 @@
 @import 'skeleton';
 @import 'mobile-optimizations';
 @import 'simple-carousel';
+@import 'member-stats';
+@import 'members';
 
 
 //Font Awesome
