Fixed caching, fixed likes, fixed member count, fixed stuck on post from notification, updated to Node 22

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -153,6 +153,16 @@
   flex-grow: 1;
   text-decoration: none;
   cursor: pointer;
+
+  &.disabled {
+    cursor: default;
+    color: #999;
+    text-decoration: none;
+
+    &:hover {
+      color: #999;
+    }
+  }
 }
 
 .like-date {
